# gitplot

./: .gitattributes  .gitignore  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  display.html  git.py  gitplot.py  make_repo.bat  old_git.py  pylintrc  pyproject.toml  readme.rst  repo_creator.py  requirements.md  requirements.txt  setup.py  test_git.py
.claude/: settings.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml  sync-develop.yml
docs/: curriculum.md  display.html  git_basics.py  git_details.py  tools.py
examples/: git_details.py  tools.py
gitplot/: __init__.py  builder.py  cli.py  colors.py  display.html  mermaid.py  monitor.py  renderer.py  repo.py
tests/: conftest.py  git_oracle.py  test_builder.py  test_e2e.py  test_gitplot.py  test_lessons.py  test_lessons_full.py  test_mermaid.py  test_monitor.py  test_oracle_differential.py  test_renderer.py  test_repo.py
tests/golden/: complex_branch.dot  complex_branch.mermaid  complex_normal.dot  complex_normal.mermaid  complex_verbose.dot  complex_verbose.mermaid  detached_head_branch.dot  detached_head_branch.mermaid  detached_head_normal.dot  detached_head_normal.mermaid  detached_head_verbose.dot  detached_head_verbose.mermaid  shallow_clone_branch.dot  shallow_clone_branch.mermaid  shallow_clone_normal.dot  shallow_clone_normal.mermaid  shallow_clone_verbose.dot  shallow_clone_verbose.mermaid
visigit/: __init__.py  builder.py  cli.py  colors.py  display.html  mermaid.py  monitor.py  renderer.py  repo.py
