[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "visigit"
version = "0.3.0"
description = "Graphviz visualizations of git repository structure"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Robert Cronk", email = "cronk.r@gmail.com" }]
requires-python = ">=3.9"
dependencies = [
    "gitpython>=3.1",
    "graphviz>=0.20",
    "watchdog>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
    "graphifyy>=0.8; python_version >= '3.10'",
]

[project.scripts]
visigit = "visigit.cli:main"

[project.urls]
Repository = "https://github.com/rcronk/visigit"

[tool.setuptools.packages.find]
where = ["."]
include = ["visigit*"]

[tool.setuptools.package-data]
visigit = ["display.html"]

[tool.ruff]
line-length = 100
target-version = "py39"
exclude = ["tstrepo"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
